--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.thymeleaf.cache=false
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springboot.sample=TRACE
 #sef4j end
+
+#datasourse start
+spring.datasource.url=jdbc:mysql://localhost:3306/erp?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=111111
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#datasourse end
